# open-clio

./: .gitignore  README.md  base_cluster.py  cluster_unthread_v2.py  cluster_v2.py  config.json  create_dataset.py  debug.py  evals.py  evaluate.py  example_config.json  explore_clusters.py  explore_clusters_demo.py  explore_clusters_opus4.py  explore_clusters_sonnet4.py  explore_clusters_unthread-v2.py  explore_clusters_unthread.py  generate_clusters.py  initial_results.txt  initial_results_2.txt  initial_results_3.txt  langgraph.json  mapping.py  prompts.py  pyproject.toml  save_results.py  scratch-scratch.py  summarise.py  summarise_parallel.py  visualise.py  viz.py
.devcontainer/: devcontainer.json
category_results/: example_id_mappings.csv
category_results/sonnet4-v3/: examples.csv  level_0_clusters.csv  level_1_clusters.csv  level_2_clusters.csv
clustering_results/: 20250623_172754_level_0_clusters.csv  20250623_172754_level_1_clusters.csv  20250623_175757_level_0_clusters.csv  20250623_175800_2d_coordinates.csv  20250625_145851_level_0_clusters.csv  combined.csv  plot.py
configs/: 2_level.json  3_level.json  chat_langchain.json  customer_support.json  easy_config.json  partitioned.json  project_config.json  test_hours.json  tracing_project_example.json
experiment_results/: plot.py
experiment_results/gpt4o-500-16-8/: 20250625_171931_examples.csv  20250625_171931_level_0_clusters.csv  20250625_171931_level_1_clusters.csv
experiment_results/gpt4o-500-25-6/: 20250625_173429_examples.csv  20250625_173429_level_0_clusters.csv  (+1 more)
open_clio/: __init__.py  evaluate.py  extend.py  extend_langgraph.py  generate.py  generate_helpers.py  generate_langgraph.py  langgraph.py  main.py  prompts.py  update.py  viz.py
(+61 files in other folders)
