[project]
name = "open-clio"
version = "0.0.1"
description = "Open-source implementation of CLIO."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "langsmith>=0.4.4",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "anthropic>=0.55.0",
    "tqdm>=4.65.0",
	"numpy>1.23.5",
]
[dependency-groups]
dev = [
    "pandas>=2.0.0",
    "ruff>=0.12.0", 
    "streamlit>=1.28.0",
]
