[project]
name = "open-clio"
version = "0.0.1"
description = "Open-source implementation of CLIO."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.2.0",
    "tqdm>=4.65.0",
    "numpy>1.23.5",
    "langchain-openai>=0.3.27",
    "langchain-anthropic>=0.3.17",
    "scikit-learn>=1.6.1",
    "langchain>=0.3.26",
    "pytest>=8.4.1",
    "openevals>=0.1.0",
    "jupyter>=1.1.1",
    "langgraph>=0.5.3",
    "asyncpg>=0.30.0",
]

[project.scripts]
open-clio = "open_clio.main:main"

[tool.setuptools.packages.find]
include = ["open_clio*"]
exclude = ["notebooks*", "tests*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]
